--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,6 +1,12 @@
-$color-green:  #63A60E;
-$color-text: #505050;
-$color-title: #121212;
-$color-red: #CF3E3B;
-$color-orange: #FF7A00;
-$bg-gray: #31352B;
+$green-900: #63A60E;
+$green-200: #E0EDCF;
+$green-100: #EFF6E7;
+$dark-900: #121212;
+$dark-800: #31352B;
+$dark-500: #505050;
+$red-900: #CF3E3B;
+$orange-900: #FF7A00;
+$yellow-900: #FFB800;
+$silver-600: #C1C1C1;
+$silver-100: #F6F6F6;
+$white: #FFFFFF;
