--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,37 +1,47 @@
 @font-face {
-    font-family: 'Ruda-Regular', sans-serif;
+    font-family: 'Ruda';
     src:
-      local("Ruda-Regular"),
       url('../fonts/Ruda-Regular.woff2') format("woff2"),
       url('../fonts/Ruda-Regular.woff') format("woff");
     font-weight: 400;
     font-display: swap;
+    font-display: fallback;
   }
 
   @font-face {
-    font-family: 'Ruda', sans-serif;
+    font-family: 'Ruda';
     src:
-      local("Ruda-SemiBold"),
       url('../fonts/Ruda-SemiBold.woff2') format("woff2"),
       url('../fonts/Ruda-SemiBold.woff') format("woff");
     font-weight: 600;
     font-display: swap;
+    font-display: fallback;
   }
 
   @font-face {
-    font-family: 'Ruda', sans-serif;
+    font-family: 'Ruda';
     src:
-      local("Ruda-Bold"),
       url('../fonts/Ruda-Bold.woff2') format("woff2"),
       url('../fonts/Ruda-Bold.woff') format("woff");
     font-weight: 700;
     font-display: swap;
+    font-display: fallback;
   }
 
-@font-face {
-    font-family: 'Open Sans', sans-serif;
+  @font-face {
+    font-family: 'Ruda';
     src:
-      local("OpenSans-Light"),
+      url('../fonts/Ruda-VariableFont_wght.woff2') format("woff2"),
+      url('../fonts/Ruda-VariableFont_wght.woff') format("woff");
+    font-weight: 900;
+    font-display: swap;
+    font-display: fallback;
+  }
+
+
+@font-face {
+    font-family: 'Open Sans';
+    src:
       url('../fonts/OpenSans-Light.woff2') format("woff2"),
       url('../fonts/OpenSans-Light.woff') format("woff");
     font-weight: 300;
@@ -39,9 +49,8 @@
   }
 
   @font-face {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans';
     src:
-      local("OpenSans-Regular"),
       url('../fonts/OpenSans-Regular.woff2') format("woff2"),
       url('../fonts/OpenSans-Regular.woff') format("woff");
     font-weight: 400;
@@ -49,9 +58,8 @@
   }
 
   @font-face {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans';
     src:
-      local("OpenSans-SemiBold"),
       url('../fonts/OpenSans-SemiBold.woff2') format("woff2"),
       url('../fonts/OpenSans-SemiBold.woff') format("woff");
     font-weight: 600;
@@ -59,9 +67,8 @@
   }
 
   @font-face {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans';
     src:
-      local("OpenSans-Bold"),
       url('../fonts/OpenSans-Bold.woff2') format("woff2"),
       url('../fonts/OpenSans-Bold.woff') format("woff");
     font-weight: 700;
