--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -22,6 +22,7 @@ li {
 a {
     color: inherit;
     text-decoration: none;
+    display: inline-block;
 }
 
 input,
@@ -67,6 +68,10 @@ button {
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
+    line-height: 1.4;
+    font-weight: 400;
+    color: $dark-500;
+    font-style: normal;
     background-color: #ffffff;
 }
 
@@ -84,8 +89,44 @@ body {
     margin: -1px;
     border: 0;
     padding: 0;
+    display: inherit;
     white-space: nowrap;
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
+}
+
+.logo {
+    margin-right: 20px;
+}
+
+.btn-mark {
+    font-size: 14px;
+    letter-spacing: 0.03em;
+    background-color: $white;
+    border-radius: 6px;
+    position: relative;
+    &::after {
+        content: '';
+        position: absolute;
+        background-image: url('../images/icon/arrow-down.svg');
+        background-repeat: no-repeat;
+        background-size: contain;
+        width: 10px;
+        height: 10px;
+        right: 12px;
+        top: 23px;
+    }
+    
+}
+
+.button {
+    position: absolute;
+    text-transform: uppercase;
+    color: $white;   
+    font-weight: 600;
+    letter-spacing: 0.03em;
+    line-height: 140%;
+    font-style: normal;
+    border-radius: 0 6px 6px 0; 
 }
