--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,210 +1,5 @@
+@import 'fonts';
 @import 'vars';
 @import 'global';
-@import 'fonts';
-
-
-.header-top {
-    background-color: $bg-gray;
-    color: #ffffff;
-    text-transform: uppercase;
-    font-size: 13px;
-    line-height: 1;
-    letter-spacing: 0.03em;
-    font-weight: 700;
-}
-
-.about {
-    &__inner {
-        display: flex;
-        justify-content: space-between;
-        padding: 17px 0 15px;
-    }
-
-    &__list {
-        display: flex;
-    }
-
-    &__item--contact {
-        position: relative;
-        margin-right: 40px;
-        padding-left: 44px;
-
-        &:before {
-            content: '';
-            position: absolute;
-            background-image: url('../images/icon/icon-car.svg');
-            background-repeat: no-repeat;
-            background-size: cover;
-            width: 32px;
-            height: 22px;
-            left: 0;
-            top: -7px;
-        }
-    }
-
-    &__item--phone {
-        position: relative;
-        padding-left: 32px;
-
-        &:before {
-            content: '';
-            position: absolute;
-            background-image: url('../images/icon/icon-tel.svg');
-            background-repeat: no-repeat;
-            background-size: cover;
-            width: 22px;
-            height: 22px;
-            left: 0;
-            top: -5px;
-        }
-    }
-
-    &__item--info:not(:first-child) {
-        margin-left: 24px;
-    }
-}
-
-.menu {
-    background-color: $color-green;
-
-    &__inner {
-        padding: 25px 0;
-        display: flex;
-        align-items: center;
-        width: 100%;
-    }
-
-    &__nav {
-        max-width: 240px;
-        width: 100%;
-        font-size: 14px;
-        line-height: 1.4;
-        font-weight: 600;
-        letter-spacing: 0.03em;
-        background-color: #ffffff;
-        border-radius: 6px;
-        padding: 15px 36px 15px 61px;
-        margin-right: 30px;
-        position: relative;
-        color: $color-green;
-
-        &::before {
-            content: '';
-            position: absolute;
-            background-image: url('../images/icon/stripes.svg');
-            background-repeat: no-repeat;
-            background-size: cover;
-            width: 25px;
-            height: 17px;
-            left: 17px;
-            top: 20px;
-        }
-
-        &::after {
-            content: '';
-            position: absolute;
-            background-image: url('../images/icon/arrow-down.svg');
-            background-repeat: no-repeat;
-            background-size: cover;
-            width: 7px;
-            height: 4px;
-            right: 18px;
-            top: 23px;
-        }
-    }
-
-}
-
-.logo {
-    margin-right: 35px;
-    max-width: 200px;
-    display: flex;
-    align-items: center;
-
-    &__img {
-        margin-right: 10px;
-        position: relative;
-    }
-
-    &__img::before {
-        content: '';
-        position: absolute;
-        background-image: url('../images/icon/logo-shadov.svg');
-        background-size: cover;
-        bottom: 2px;
-        left: 0;
-        width: 50px;
-        height: 2px;
-        z-index: 0;
-    }
-}
-
-.logo-text {
-    font-family: 'Ruda', sans-serif;
-    font-size: 26px;
-    line-height: 1;
-    font-weight: 400;
-    text-transform: uppercase;
-    color: #ffffff;
-    text-align: center;
-    span {
-        font-size: 12px;
-        display: block;
-    }
-}
-
-.search {
-    display: flex;
-    padding: 15px 200px 15px 51px;
-    background-color: #ffffff;
-    max-width: 576px;
-    width: 100%;
-    height: auto;
-    position: relative;
-    border-radius: 6px;
-    &::before {
-        content: '';
-        position: absolute;
-        width: 20px;
-        height: 20px;
-        background-image: url('../images/icon/search.svg');
-        left: 13px;
-        top: 16px;
-    }
-
-    &__input {
-        &::placeholder {
-            color: $bg-gray;
-            font-size: 14px;
-            line-height: 1.4;
-            letter-spacing: 0.03em;
-        }
-    }
-    &__btn {
-        position: absolute;
-        background-color: $bg-gray;
-        color: #ffffff;
-        text-transform: uppercase;
-        padding: 15px 50px;
-        border-radius: 0 6px 6px 0;
-        right: 0;
-        top: 0;
-        border: none;
-    }
-}
-
-.box {
-    display: flex;
-    &__item {
-        margin-left: 30px;
-    }
-    &__list {
-        display: inherit;
-        background-position: center;
-        background-size: contain;
-        background-repeat: no-repeat;
-        width: 35px;
-        height: 35px;
-    }
-    
-}
+@import 'components/header';
+@import 'components/slaid';
