--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,5 +1,7 @@
+@import 'libs';
 @import 'fonts';
 @import 'vars';
 @import 'global';
 @import 'components/header';
-@import 'components/slaid';
+@import 'components/slider';
+@import 'components/footer';
