--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -39,6 +39,10 @@ textarea::placeholder {
     color: inherit;
 }
 
+address {
+    font-style: normal;
+}
+
 h1,
 h2,
 h3,
@@ -46,7 +50,7 @@ h4,
 h5,
 h6,
 body,
-p ,
+p,
 blockquote,
 ul {
     margin: 0;
@@ -73,6 +77,17 @@ body {
     color: $dark-500;
     font-style: normal;
     background-color: #ffffff;
+}
+
+
+
+.main {
+    min-height: calc(100vh - 336px);
+}
+
+.footer {
+    background-color: $dark-900;
+    color: $white;
 }
 
 .container {
@@ -106,6 +121,7 @@ body {
     background-color: $white;
     border-radius: 6px;
     position: relative;
+
     &::after {
         content: '';
         position: absolute;
@@ -117,16 +133,16 @@ body {
         right: 12px;
         top: 23px;
     }
-    
+
 }
 
 .button {
     position: absolute;
     text-transform: uppercase;
-    color: $white;   
+    color: $white;
     font-weight: 600;
     letter-spacing: 0.03em;
     line-height: 140%;
     font-style: normal;
-    border-radius: 0 6px 6px 0; 
+    border-radius: 0 6px 6px 0;
 }
