--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -1,5 +1,10 @@
 .header-info {
     background-color: $dark-800;
+    color: $white;
+    text-transform: uppercase;
+    font-size: 13px;
+    font-weight: 600;
+    letter-spacing: 0.03em;
 
     &__list {
         display: flex;
@@ -13,7 +18,6 @@
     &__item:first-child {
         padding-left: 40px;
         margin-right: 50px;
-
         &::before {
             content: '';
             position: absolute;
@@ -46,12 +50,22 @@
     }
 
     &__link {
-        font-size: 13px;
-        font-weight: 600;
-        letter-spacing: 0.03em;
-        color: $white;
-        text-transform: uppercase;
+        transition: all 0.6s;
     }
+
+    &__item:hover {
+        opacity: 0.7;
+    }
+
+    &__link:active {
+        color: $green-200;
+    }
+
+    &__link:focus {
+        box-shadow: 0 0 0 3px $white;
+        border-radius: 3px;
+    }
+
 }
 
 .nav {
@@ -63,37 +77,122 @@
         display: flex;
         align-items: center;
     }
-}
 
-.nav__catalog {
-    color: $green-900;
-    font-weight: 600;
-    margin-right: 35px;
-    padding: 15px 30px 15px 61px;
-    border: inherit;
-    position: relative;
+    &__catalog {
+        color: $green-900;
+        font-weight: 600;
+        margin-right: 35px;
+        padding: 15px 30px 15px 61px;
+        border: inherit;
+        position: relative;
 
-    &:before {
-        content: '';
-        position: absolute;
-        background-image: url('../images/icon/nav_icon.svg');
-        background-repeat: no-repeat;
-        width: 25px;
-        height: 17px;
-        left: 18px;
-        top: 16px;
+        &:before {
+            content: '';
+            position: absolute;
+            background-image: url('../images/icon/nav_icon.svg');
+            background-repeat: no-repeat;
+            width: 25px;
+            height: 17px;
+            left: 18px;
+            top: 16px;
+        }
     }
+
+    &__catalog:hover {
+        background-color: #E0EDCF;
+        border-radius: 6px 6px 0px 0px;
+
+    }
+
+    &__user {
+        display: flex;
+
+    }
+
+    &__userbar {
+        width: 50px;
+        height: 50px;
+        border-radius: 3px;
+        position: relative;
+        &::before {
+            content: '';
+            position: absolute;
+            background-size: cover;
+            background-repeat: no-repeat;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
+    &__login {
+        &::before {
+            background-image: url('../images/icon/user.svg');
+            width: 25px;
+            height: 32px;
+        }
+    }
+
+    &__dreambox {
+        &::before {
+            background-image: url('../images/icon/favorite.svg'); 
+            width: 32px;
+            height: 29px;
+        }
+    }
+    &__basket {
+        &::before {
+            background-image: url('../images/icon/basket.svg');
+            width: 32px;
+            height: 31px;
+        }
+      
+    }
+    &__basket::after,
+    &__dreambox::after {
+        content: '12';
+        position: absolute;
+        width: 18px;
+        height: 18px;
+        border-radius: 10px;
+        background-color: $white;
+        color: $red-900;
+        top: 0;
+        left: 0;
+        font-size: 10px;
+        padding: 2px 2px;
+    }
+
+
+    &__item:not(:last-child) {
+        margin-right: 15px;
+    }
+    &__login:hover,
+    &__dreambox:hover,
+    &__basket:hover {
+        background-color:rgba(255, 255, 255, 0.1);
+    }
+    &__login:focus,
+    &__dreambox:focus,
+    &__basket:focus {
+        background-color:rgba(255, 255, 255, 0.1);
+        box-shadow: 0 0 0 3px $green-100;
+    }
+    &__login:active,
+    &__dreambox:active,
+    &__basket:active {
+        background-color:rgba(255, 255, 255, 0.1);
+        
+    }
+
 }
 
 .form {
     display: flex;
     align-items: center;
     position: relative;
-    margin-right: 58px;
+    margin-right: 30px;
 
     &__label {
-        position: relative;
-
         &::after {
             content: '';
             position: absolute;
@@ -119,43 +218,22 @@
             color: $dark-800;
         }
     }
-}
 
-.form__btn {
-    font-size: 14px;
-    padding: 15px 50px;
-    background-color: $dark-800;
-    right: 0;
-}
+    &__btn {
+        font-size: 14px;
+        padding: 15px 50px;
+        background-color: $dark-800;
+        right: 0;
+    }
 
-.nav-user {
-    display: flex;
-    align-items: center;
-
-    &__item {
-        background-size: contain;
-        background-repeat: no-repeat;
-
-        &:not(:last-child) {
-            margin-right: 30px;
-        }
-
-        &:first-child {
-            background-image: url('../images/icon/user.svg');
-            width: 25px;
-            height: 32px;
-        }
-
-        &:nth-child(2) {
-            background-image: url('../images/icon/favorite.svg');
-            width: 32px;
-            height: 28px;
-        }
-
-        &:last-child {
-            background-image: url('../images/icon/basket.svg');
-            width: 32px;
-            height: 31px;
-        }
+    &__btn:hover {
+        background-color: rgba(49, 53, 43, 0.85);
+    }
+    &__btn:focus,
+    &__fild:focus {
+        box-shadow: 0 0 0 4px rgba($green-200, 0.5);
+    }
+    &__btn:active {
+        opacity: 0.7;
     }
 }
