--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -8,5 +8,6 @@ $red-900: #CF3E3B;
 $orange-900: #FF7A00;
 $yellow-900: #FFB800;
 $silver-600: #C1C1C1;
+$silver-200: #f5f5f5;
 $silver-100: #F6F6F6;
 $white: #FFFFFF;
