--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -8,83 +8,75 @@
 
     &__list {
         display: flex;
-        padding: 15px 0;
-    }
-
-    &__item:not(:last-child) {
-        margin-right: 24px;
+        padding: 17px 0 15px;
     }
 
     &__item {
-        position: relative;
-        flex-grow: 0;
-    }
+        flex-wrap: 0;
 
-    &__item:nth-child(2) {
-        flex-grow: 1;
+        &:not(:last-child) {
+            margin-right: 24px;
+        }
+        &:nth-child(2) {
+            flex-grow: 1;
+            padding-left: 18px;
+        }
+        &:first-child {
+            margin-right: 24px;
+        }
     }
 
     &__link {
-        color: inherit;
-        transition: color, opacity;
-        transition-duration: 0.4s, 0.7s;
+        position: relative;
+        border-radius: 3px;
+        transition: box-shadow,  color, opacity;
+        transition-duration: 0.5s, 0.3s, 0.6s;
+        &:focus {
+            box-shadow: 0 0 0 3px $green-100;
+         }
+         &:hover {
+             opacity: 0.7;
+         }
+         &:active {
+             color: $green-100;
+         }
 
-        &--address {
-            padding-left: 40px;
-            margin-right: 25px;
-
-            &::before {
-                background-image: url('../images/icon/icon-car.svg');
-                width: 32px;
-                top: -2px;
-            }
-        }
-
+        &--address, 
         &--hotline {
-            padding-left: 30px;
-
-            &::before {
-                background-image: url('../images/icon/icon-tel.svg');
-                width: 21px;
-                height: 21px;
-            }
-        }
-
-        &--address,
-        &--hotline {
-
+            
             &::before {
                 content: '';
                 position: absolute;
-                left: 0;
-                background-size: contain;
                 background-repeat: no-repeat;
-                height: 21px;
-
+                background-size: contain;
+                left: 0;
             }
         }
-
-        &:focus {
-            box-shadow: 0 0 0 3px $white;
-            border-radius: 3px;
+        &--address {
+            padding-left: 44px;
+            &::before {
+                background-image: url('../images/icon/icon-car.svg');
+                width: 32px;
+                height: 22px;
+                top: -4px;
+            }
         }
-
-        &:hover {
-            opacity: 0.7;
-            transition: 0.6s;
+        &--hotline {
+            padding-left: 44px;
+            &::before {
+                background-image: url('../images/icon/icon-tel.svg');
+                width: 22px;
+                height: 22px;
+                top: -2px;
+                left: 10px;
+            }
         }
-
-        &:active {
-            color: $green-200;
-        }
-
+     
     }
-
-
 }
 
 .nav {
-    padding: 25px 0 20px;
+    padding: 22px 0 20px;
     background-color: $green-900;
     color: $white;
 
@@ -96,106 +88,121 @@
     &__catalog {
         color: $green-900;
         font-weight: 600;
-        margin-right: 35px;
-        padding: 15px 30px 15px 61px;
+        margin-right: 30px;
+        padding: 15px 38px 15px 62px;
         font-size: 14px;
         letter-spacing: 0.03em;
         background-color: $white;
         border-radius: 6px;
         border: inherit;
         position: relative;
-        transition: background-color 0.5s;
+        transition: background-color, border-radius, box-shadow;
+        transition-duration: 0.5s, 0.3s, 0.5s;
 
-        &:before {
+        &:focus {
+            box-shadow: 0 0 0 3px $green-100;
+         }
+
+        &:hover {
+            background-color: $green-200;
+            border-radius: 6px 6px 0 0;
+        }
+       
+        &:before,
+        &:after {
             content: '';
             position: absolute;
-            background-image: url('../images/icon/nav_icon.svg');
             background-repeat: no-repeat;
+            background-size: contain;
+        }
+        &:before {
+            background-image: url('../images/icon/nav_icon.svg');
             width: 25px;
             height: 17px;
             left: 18px;
             top: 16px;
         }
-
         &::after {
-            content: '';
-            position: absolute;
             background-image: url('../images/icon/arrow-down.svg');
-            background-repeat: no-repeat;
-            background-size: contain;
             width: 10px;
-            height: 10px;
-            right: 12px;
+            height: 9px;
+            right: 18px;
             top: 23px;
         }
-
-        &:hover {
-            background-color: $green-200;
-            border-radius: 6px 6px 0px 0px;
+        &--active {
+            &::after{
+                transform: rotate(180deg);
+                top: 18px; 
+            }
         }
+       
     }
-
-
 
     &__user {
         display: flex;
-
+    
     }
-
     &__item {
+        &:not(:first-child) {
+            margin-left: 15px;
+        }
+    }
+   
+    &__userbar {
         position: relative;
         width: 50px;
         height: 50px;
-    }
-
-    &__userbar {
-        position: relative;
-
+        border-radius: 3px;
+        transition: box-shadow, background-color, opacity;
+        transition-duration: 0.5s, 0.4s, 0.5s;
         &::before {
             content: '';
             position: absolute;
             background-size: contain;
             background-repeat: no-repeat;
-            transform: translate(35%, -40%);
-            padding: 10px;
+            background-position: center;
             width: 50px;
             height: 50px;
-            border-radius: 3px;
-            transition: box-shadow, background-color, opacity;
-            transition-duration: 0.5s, 0.6, 0.6s;
+            top:50%;
+            left:50%;
+            transform:translate(-50%,-50%);
         }
-
+        &:focus {
+            box-shadow: 0 0 0 3px $white;
+        }
+        &:hover {
+            background-color: rgba(#FFFFFF, 0.1);
+        }
+        &:active {
+            opacity: 0.5;
+        }
         &--login {
             &::before {
-                content: url('../images/icon/user.svg');
+                content:'' ;
+                background-image:url('../images/icon/user.svg') ;
+                width: 25px;
+                height: 32px;
             }
         }
 
         &--favorite {
             &::before {
-                content: url('../images/icon/favorite.svg');
+                content: '';
+                background-image:url('../images/icon/favorite.svg') ;
+                width: 32px;
+                height: 39px;
+                
             }
         }
 
         &--basket {
             &::before {
-                content: url('../images/icon/basket.svg');
+                content:'';
+                background-image: url('../images/icon/basket.svg');
+                width: 32px;
+                height: 32px;
+                
             }
-        }
-
-        &:focus::before {
-            background-color: rgba(255, 255, 255, 0.1);
-            box-shadow: 0 0 0 3px $green-100;
-        }
-
-        &:hover::before {
-            background-color: rgba(255, 255, 255, 0.1);
-            opacity: 0.1s;
-            transition: 0.6s;
-        }
-
-        &:active::before {
-            background: rgba(255, 255, 255, 0.1);
         }
 
     }
@@ -209,30 +216,23 @@
         background-color: $white;
         color: $red-900;
         top: 0;
-        left: 20px;
+        left: 0;
         font-size: 10px;
         padding: 2px 3px;
     }
 
-
-    &__item:not(:last-child) {
-        margin-right: 15px;
-    }
-
-
 }
 
-.logo--header {
-    margin-right: 20px;
-}
 
 .form {
+    max-width: 574px;
+    width: 100%;
     display: flex;
     align-items: center;
-    position: relative;
     margin-right: 30px;
-
+    position: relative;
     &__label {
+        width: 100%;
         &::after {
             content: '';
             position: absolute;
@@ -245,35 +245,43 @@
             left: 13px;
             top: 12px;
         }
+       
     }
 
     &__field {
-        width: 576px;
-        padding: 15px 200px 15px 51px;
+        width: 100%;
+        padding: 15px 10px 15px 51px;
         background-color: $white;
-        border-radius: 6px;
-
+        border-radius: 6px 0 0 6px;
+        transition: box-shadow, background-color;
+        transition-duration: 0.4s, 0.5s;
+        line-height: 0.03em;
+        &:focus {
+            box-shadow: 0 0 0 3px $green-200;
+        }
+        &:hover {
+            background-color: $green-200;
+            
+        }
         &::placeholder {
             font-size: 14px;
             color: $dark-800;
+            
         }
     }
 
     &__btn {
-        position: absolute;
         font-size: 14px;
-        padding: 15px 50px;
+        padding: 16px 50px;
         background-color: $dark-800;
-        right: 0;
+        border: none;
     }
 
-    &__btn:hover,
-    &__fild:hover {
+    &__btn:hover {
         background-color: rgba(49, 53, 43, 0.85);
     }
 
-    &__btn:focus,
-    &__fild:focus {
+    &__btn:focus {
         box-shadow: 0 0 0 4px rgba($green-200, 0.5);
     }
 
