--- a/app/scss/components/_slider.scss
+++ b/app/scss/components/_slider.scss
@@ -3,45 +3,48 @@
     &__list {
         position: relative;
     }
-
     &__inner {
-        position: relative;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        padding: 140px 0;
+        object-fit: cover;
         height: auto;
+        padding: 142px 0;
+        
     }
 
     &__item {
         background-color: rgba(255, 255, 255, 0.8);
         padding: 24px;
         border-radius: 4px;
-
-        p {
-            margin-bottom: 32px;
-    
-        }
+       
+    }
+    &__text {
+        margin: 12px 0 32px;
     }
 
     &__title {
-        max-width: 761px;
+        max-width: 770px;
         width: 100%;
         font-size: 60px;
+        font-style: normal;
         font-family: 'Ruda', sans-serif;
         font-weight: 700;
         line-height: 1.3;
+        letter-spacing: 0.03em;
         text-transform: uppercase;
         color: $dark-500;
-        margin-bottom: 12px;
+        margin-bottom: 0px;
 
         span {
             color: $red-900;
+
         }
     }
 
     &__btn {
         padding: 10px 20px;
+        display: inline-block;
         color: $white;
         background-color: $green-900;
         font-size: 18px;
@@ -78,7 +81,8 @@
             background-size: contain;
             width: 20px;
             height: 30px;
-            top: 14px;
+            top: 50%;
+            transform: translate(-50%, -50%);
         }
        
     }
@@ -87,7 +91,6 @@
         left: 60px;
         &::before {
             background-image: url('../images/icon/left-arrow.svg');
-            right: 21px;
         }
     }
 
@@ -95,7 +98,6 @@
         right: 60px;
         &::before {
             background-image: url('../images/icon/right-arrow.svg');
-            right: 21px;
         }
     }
   
@@ -104,53 +106,23 @@
         box-shadow: 0 0 0 3px #63a60e80;
     }
 
-    .slick-prev:hover {
-        background-color: $green-200;
-        &::before {
-            background-image: url('../images/icon/left-arrow.svg');
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: contain;
-            filter: invert(66%) sepia(41%) saturate(3524%) hue-rotate(46deg) brightness(87%) contrast(89%);
-   
-        }
-    }
+    .slick-prev:hover,
     .slick-next:hover {
         background-color: $green-200;
         &::before {
-            background-image: url('../images/icon/right-arrow.svg');
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: contain;
             filter: invert(66%) sepia(41%) saturate(3524%) hue-rotate(46deg) brightness(87%) contrast(89%);
    
         }
     }
-    .slick-prev:active {
+  
+    .slick-prev:active,
+    .slick-next:active  {
         background-color: #F3F3F2;
         &::before {
-            background-image: url('../images/icon/left-arrow.svg');
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: contain;
             filter: invert(66%) sepia(41%) saturate(3524%) hue-rotate(46deg) brightness(87%) contrast(89%);
-   
         }
     }
-    .slick-next:active {
-        background-color: #F3F3F2;
-        &::before {
-            background-image: url('../images/icon/right-arrow.svg');
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: contain;
-            filter: invert(66%) sepia(41%) saturate(3524%) hue-rotate(46deg) brightness(87%) contrast(89%);
-   
-        }
-    }
-}
-.slick-slider {
-    height: 595px;
+    
 }
 //bebefits
 
@@ -171,8 +143,10 @@
         max-width: 264px;
         width: 100%;
         margin: 0 32px;
-        font-weight: 600;
         color: $dark-900;
+        p {
+            font-size: 14px;
+        }
         &::before {
             content: '';
             position: absolute;
@@ -194,15 +168,12 @@
             background-image: url('../images/icon/icon-hours.svg');
             height: 50px;
         }
-
-        p {
-            font-size: 14px;
-        }
         
     }
     &__title {
         font-size: 16px;
         margin-bottom: 7px;
+        font-weight: 600;
     }
    
 }
