--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,3 +6,5 @@
 @import 'components/slider';
 @import 'components/footer';
 @import 'components/catalog';
+@import 'components/banner';
+@import 'components/promo-card';
