--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -8,3 +8,5 @@
 @import 'components/catalog';
 @import 'components/banner';
 @import 'components/promo-card';
+@import 'components/slider-brends';
+@import 'components/news'
