--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -155,6 +155,45 @@ body {
     line-height: 1.4;
     font-style: normal;
     border-radius: 0 6px 6px 0;
+    transition: box-shadow 0.4s, background-color 0.5s, opacity 0.7s, color 0.6s;
+    &:focus {
+        box-shadow: 0 0 0 4px rgba(99, 166, 14, 0.5);
+    }
+    &--white,
+    &--green {
+        border-radius: 6px;
+        text-transform: inherit;   
+        border: 1px solid $green-900;
+        display:inline-block;
+        padding: 10px 22px;
+        font-size: 18px;
+        line-height: 1.3;
+     }
+    &--white {
+        background-color: $white;
+        color: $green-900;
+       
+    
+        &:hover {
+            background-color: $green-200;
+        }
+    
+        &:active {
+            box-shadow: inset 0 10px 4px rgba(0, 0, 0, 0.1);
+            color: rgba(99, 166, 14, 0.5);
+        }
+    }
+    &--green {
+        color: $white;
+        background-color: $green-900;
+        &:hover {
+            background-color: #4D810C;
+        }
+        &:active {
+            opacity: 0.7;
+        }
+    }
+
 }
 
 .title {
@@ -167,4 +206,3 @@ body {
     text-align: center;
     margin-bottom: 30px;
 }
-
