--- a/app/scss/components/_catalog.scss
+++ b/app/scss/components/_catalog.scss
@@ -13,32 +13,15 @@
         margin-bottom: 30px;
         border: 1px solid rgba(17, 17, 17, 0.2);
         border-radius: 6px;
-    }
-
-    &__morebtn {
-        display: inline-block;
-        font-size: 18px;
-        color: $green-900;
-        letter-spacing: 0.03em;
-        line-height: 1.3;
-        padding: 10px 22px;
-        border: 1px solid $green-900;
-        border-radius: 3px;
-        transition: box-shadow 0.4s, background-color 0.5s, opacity 0.7s, color 0.6s;
-
-        &:focus {
-            box-shadow: 0 0 0 4px rgba(99, 166, 14, 0.5);
-        }
+        transition-property: border;
+        transition-duration: 0.4s;
 
         &:hover {
-            background-color: $green-200;
-        }
-
-        &:active {
-            box-shadow: inset 0 10px 4px rgba(0, 0, 0, 0.1);
-            color: rgba(99, 166, 14, 0.5);
+            border: 1px solid $green-900;
         }
     }
+
+
 }
 
 .navigation-mix {
@@ -85,8 +68,8 @@
     &__badges {
         position: absolute;
         color: $white;
-        top: 8pxpx;
-        left: 10px;
+        top: 5px;
+        left: 12px;
     }
 
     &__status {
@@ -101,6 +84,7 @@
         font-weight: 700;
         font-size: 10px;
         line-height: 1;
+        letter-spacing: 0.03em;
         padding: 3px 6px;
         border-radius: 6px;
     }
@@ -148,19 +132,17 @@
             filter: invert(59%) sepia(85%) saturate(503%) hue-rotate(1deg) brightness(106%) contrast(104%);
         }
 
+        &--orange:active {
+            opacity: 0.5;
+        }
+
     }
 
-    &__images {
+    &__link {
         margin-bottom: 12px;
         position: relative;
         display: block;
 
-        img {
-            max-width: 300px;
-            background-size: contain;
-            background-repeat: no-repeat;
-            background-position: center;
-        }
         &::before,
         &::after {
             content: '';
@@ -169,6 +151,7 @@
             transition-duration: 0.7s;
             opacity: 0;
         }
+
         &::before {
             top: 0;
             bottom: 0;
@@ -197,12 +180,21 @@
         }
     }
 
+    &__images {
+        max-width: 300px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
     &__caption {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         padding: 0 18px 0;
         height: 100px;
+        color: $dark-900;
+        position: relative;
     }
 
     &__subtitle {
@@ -216,38 +208,61 @@
     &__bottom {
         display: flex;
         justify-content: space-between;
+        align-items: flex-end;
     }
 
-    &__price-box {
-        line-height: 1;
-        font-size: 14px;
-        letter-spacing: 0.03em;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+    &__availability {
+        display: none;
+        position: absolute;
+        bottom: 25px;
 
+    }
+
+    &__stock {
+        text-transform: uppercase;
+        font-size: 10px;
+        font-weight: 600;
+
+        &--green {
+            color: $green-900;
+        }
+
+        &--red {
+            color: $red-900;
+        }
+
+        &--grey {
+            color: $silver-600;
+        }
     }
 
     &__price {
-        display: block;
+        line-height: 1;
+        font-size: 14px;
+        letter-spacing: 0.03em;
 
+    }
+
+    &__box {
+        color: $dark-500;
         &--old {
             position: relative;
             color: #c1c1c1;
-            position: relative;
+            display: inline-block;
 
             &::before {
                 content: '';
                 position: absolute;
                 width: 100%;
                 height: 1px;
-                bottom: 5px;
+                bottom: 8px;
                 background-color: #c1c1c1;
                 transform: rotate(-15deg);
             }
 
         }
     }
+
 
     &__basket {
         width: 32px;
@@ -268,7 +283,8 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            transition: opacity 0.5s;
+            transition-property: opacity;
+            transition-duration: 0.4s;
         }
 
         &:focus {
@@ -277,12 +293,35 @@
 
         &:hover {
             background-color: #4D800C;
-
         }
 
-        
+        &:active {
+            opacity: 0.5;
+        }
+
 
     }
 
+    .reiting {
+        display: none;
+        font-weight: bold;
+        font-size: 14px;
+        padding-right: 20px;
+        width: 38px;
+        height: 16px;
+        margin-bottom: 3px;
+        position: relative;
+
+        &::before {
+            content: '';
+            position: absolute;
+            background-image: url('../images/icon/reiting-icon.svg');
+            background-image: url(../images/icon/reiting-icon.svg);
+            width: 16px;
+            height: 15px;
+            right: -2px;
+            bottom: 0px;
+        }
+    }
 
 }
