--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -28,11 +28,17 @@
         width: 100%;
         margin-right: 150px;
     }
-
-    &__item {
-        max-width: 214px;
-        width: 100%;
+    &__subtitle {
+        font-size: 14px;
+        line-height: 1;
+        font-weight: 400;
+        margin-bottom: 20px;
     }
+
+    &__label {
+        display: flex;
+    }
+  
 
     &__field {
         padding: 10px;
@@ -48,7 +54,6 @@
     &__btn {
         padding: 12px 16px 12px;
         background-color: $green-900;
-        position: absolute;
         transition: background-color, opacity;
         transition-duration: 0.5s, 0.7s;
         font-size: 12px;
@@ -60,15 +65,12 @@
             opacity: 0.7;
         }
     }
-
-
-    p {
-        font-size: 14px;
-        line-height: 1;
-        font-weight: 400;
-        margin-bottom: 20px;
+    &__item {
+        max-width: 214px;
+        width: 100%;
     }
 
+    
     &__part {
         margin-bottom: 18px;
     }
@@ -77,6 +79,7 @@
         font-size: 14px;
         transition: color, opacity, box-shadow;
         transition-duration: 0.4s, 0.7s, 0.5s;
+        letter-spacing: 0;
 
         &:hover {
             opacity: 0.7;
@@ -108,10 +111,6 @@
         transition: color, opacity, box-shadow;
         transition-duration: 0.4s, 0.7s, 0.5s;
 
-        &:not(:last-child) {
-            margin-right: 5px;
-        }
-
         &:focus {
             box-shadow: 0 0 0 3px $green-200;
         } 
@@ -119,9 +118,17 @@
             opacity: 0.7;
         }
 
-       /* &:active {
-            
-        }*/
+        &--active:active {
+            background-repeat: no-repeat;
+            background-size: contain;
+            filter: invert(93%) sepia(13%) saturate(369%) hue-rotate(42deg) brightness(104%) contrast(86%);
+        }
+
+    }
+    &__item {
+        &:not(:last-child) {
+            margin-right: 11px;
+        }
 
     }
 
@@ -130,7 +137,7 @@
 
 
 .payment {
-    border-top: 1px solid rgba(255, 255, 255, 1);
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
 
     &__inner {
         height: 60px;
@@ -145,6 +152,7 @@
     }
     &__info {
         display: flex;
+        height: inherit;
     }
 
     &__item {
@@ -154,7 +162,7 @@
             background-size: contain;
             background-position: center;
             width: 93px;
-            height: 29px;
+            display: block;
             margin-right: 24px;
         }
 
@@ -164,7 +172,6 @@
             background-size: contain;
             background-position: center;
             width: 45px;
-            height: 29px;
         }
     }
 }
